2004-04-01  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade:

	Moved 'Edit/Delete' after 'Edit/[De]select All'.

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb:

	Implemented the 'Delete' book action.  

	* lib/alexandria/ui/alert_dialog.rb,
	  lib/alexandria/ui/error_dialog.rb,
	  lib/alexandria/ui.rb:

	Renamed error_dialog.rb in alert_dialog.rb.

2004-03-31  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	- Removed obsolete callbacks ;
	- Added a popup menu for multiple selections and a default one
	  when nothing is selected yet ;
	- Implemented the 'Refresh' action.

2004-03-31  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Added 'Edit/Select All' and 'Edit/Deselect All'.

2004-03-30  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/icons/alexandria_small.png,
	  data/alexandria/icons/library.png,
	  data/alexandria/icons/library_small.png,
	  lib/alexandria/ui/icons.rb:

	Added.

	* data/alexandria/glade/main_app.glade,
	  data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui.rb,
	  lib/alexandria/ui/about_dialog.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:
	
	- Implemented the side pane ;
	- Implemented 'View as Icons/List' ;
	- Added popup menu for single selections ;
	- The new book dialog has been modified to accept a library
	  in which the book will be added ;
	- Added 'New Library', 'Refresh' and 'View as Icons/List' on
	  the toolbar.

2004-03-21  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Implemented libraries tree view in the sidepane
	- Implemented 'View/Toolbar' and 'View/Statusbar'
	- Added and implemented 'View/Side pane'

	* lib/alexandria/book.rb:
	Removed our check on the ISBN number (since it can contain